--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "flowbite-react": "^0.12.10",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "react": "19.2.0",
